Removed unnecessary finalizedTeletextPage method in TeletextPage and multiple small code improvements.